imported font for headers; adjust cards with bulleted points aligning with other text; created space in between elements in the navbar and border color for reserve button; fixed cards to have corners with no roundness

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,17 @@
 body{
 font-family: sans-serif;
 }
+
+h1 {
+  font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+h5{
+font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
  header{
     background-color: #000324;
  }
